# plaquette

./: .gitmodules  CMakeLists.txt  Doxyfile  compile.bat  compile_commands.json
include/compute/: command.hpp  device.hpp  instance.hpp  log.hpp  pipeline.hpp  reflection.hpp  spirv_reflect.h  storage.hpp
include/plaquette/: command.hpp  device.hpp  fence.hpp  instance.hpp  pipeline.hpp  reflection.hpp  simulation.hpp  storage.hpp  util.hpp
include/plaquette/vulkan/: device.hpp  fence.hpp  pipeline.hpp  reflection.hpp  shader.hpp  storage.hpp
include/plaquette/workload/: average.hpp  rand.hpp
include/plaquette/workloads/: mean.hpp  rand.hpp  workload.hpp
include/spirv/unified1/: spirv.h
src/: command.cpp  compute.slang  device.cpp  fence.cpp  instance.cpp  main.cpp  pipeline.cpp  reflection.cpp  simulation.cpp  spirv_reflect.c  storage.cpp
src/shaders/: analysis.slang  config.slang  lqft.slang  rand.slang  xoshiro.slang
src/shaders/workloads/: mean.slang  rand.slang
src/vulkan/: command.cpp  device.cpp  fence.cpp  instance.cpp  pipeline.cpp  reflection.cpp  shader.cpp  spirv_reflect.c  storage.cpp
src/workloads/: mean.cpp  rand.cpp
