cmake_minimum_required(VERSION 3.20)
project(rt)

include(cmake/CPM.cmake)

set(FETCHCONTENT_QUIET  FALSE CACHE BOOL "" FORCE)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)

set(SLANG_ENABLE_SLANGC         OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANGD         OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANGI         OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANG_GLSLANG  OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_SLANGRT        OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_GFX            OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_TESTS          OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_DXIL           OFF CACHE BOOL "" FORCE)
set(SLANG_ENABLE_EXAMPLES       OFF CACHE BOOL "" FORCE)

set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS    OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS     OFF CACHE BOOL "" FORCE)
set(GLFW_INSTALL        OFF CACHE BOOL "" FORCE)

CPMAddPackage("gh:gabime/spdlog#79524dd@v1.17.0")
CPMAddPackage("gh:shader-slang/slang#4265906@v2026.14")
CPMAddPackage("gh:glfw/glfw#7b6aead@3.4")
CPMAddPackage("gh:zeux/volk#3ca312a@1.4.350")

set(SOURCES
    src/main.cpp
    src/vulkan/instance.cpp
    src/vulkan/device.cpp
    src/vulkan/pipeline.cpp
    src/vulkan/storage.cpp
    src/vulkan/reflection.cpp
    src/vulkan/command.cpp
    src/vulkan/fence.cpp
    src/vulkan/spirv_reflect.c

    src/simulation.cpp
    src/workloads/rand.cpp
    src/workloads/mean.cpp
)

message(${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_executable(rt ${SOURCES})
target_include_directories(rt PRIVATE include)
target_compile_definitions(rt PRIVATE BUILD_DIR="${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
target_link_libraries(rt PRIVATE volk glfw spdlog slang)
